Changed gradle JFX plug-in