@@ -1,37 +1,27 @@
-// Declares binary plugin and its required JavaFX classpath
-apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin"
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
+    repositories {
+        mavenLocal()
+        mavenCentral()
 
-// Configures plugin
-javafx {
-    // Points to JDK and its JavaFX libraries, also declares target runtime JDK
-    //javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.7.0_40.jdk'
+    }
+}
+apply plugin: 'java'
 
-    // Application name and ID presented by target OS
-    appID 'SuperFitzySpaceShooter'
-    appName 'Super Fitzy Space Shooter'
-
-    // Main class of application
-    mainClass 'com.fitzysoft.spaceshooter.Main'
-
-    // JVM arguments, system properties, application command line arguments
-    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
-    systemProperties = ['prism.disableRegionCaching':'true']
-    arguments = ['-l', '--fast']
-
-//    // Keystore credentials for signing JAR
-//    // Generate key: keytool -genkey -alias release -keyalg RSA -keystore keystore.jks -keysize 2048
-//    releaseKey {
-//        alias = 'release'
-//        keyPass = getProjectProperty('keyStorePassword')
-//        keyStore = file("${System.properties['user.home']}/keystore/keystore.jks")
-//        storePass = getProjectProperty('storePassword')
-//    }
-//
-//    signingMode 'release'
-
-    // ...
+repositories {
+    mavenLocal()
+    mavenCentral()
 }
 
-String getProjectProperty(String propertyName) {
-    project.hasProperty(propertyName) ? project.property(propertyName) : null
+apply plugin: 'javafx-gradle-plugin'
+
+
+jfx {
+    // minimal requirement for jfxJar-task
+    mainClass = 'com.fitzysoft.spaceshooter.Main'
+
+    // minimal requirement for jfxNative-task
+    vendor = 'FitzySoft'
 }
